--- a/app-scr/src/app/pages/bitacora-actividad-v2/components/clima/clima.component.html
+++ b/app-scr/src/app/pages/bitacora-actividad-v2/components/clima/clima.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-            <h2 class="h4 text-primary py-1 my-0">Listado de climas</h2>
+            <h2 class="h4 text-primary py-1 my-0">Listado</h2>
         </div>
         <div class="col d-flex justify-content-end">
             <button mat-raised-button color="accent" (click)="openClimaModal($event)">
