--- a/app-scr/src/app/pages/bitacora-actividad-v2/components/actividad/actividad.component.html
+++ b/app-scr/src/app/pages/bitacora-actividad-v2/components/actividad/actividad.component.html
@@ -1,1 +1,120 @@
-<p>actividad works!</p>
+<div class="container-fluid">
+    <app-webcam
+    style="z-index: 100"
+    [images]="tipo_foto == 1 ? actividadForm.get('fotos_ant')?.value : actividadForm.get('fotos_des')?.value"
+    (photosEvent)="onPhotosCaptured($event)"
+    [isModalOpen]="isWebcamModalOpen"
+    (modalClosed)="onWebcamModalClosed()"/>
+    <form class="row gx-2 gy-2" [formGroup]="actividadForm" id="form-actividad">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex gap-2">
+                <mat-icon>construction</mat-icon>
+                <h4 class="actividad-title">Equipo</h4>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>No. Economico</mat-label>
+                <input matInput type="text" formControlName="no_economico" tabindex="1" autofocus style="text-transform: uppercase;">
+            </mat-form-field>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label class="text-truncate">Horas de uso</mat-label>
+                <input matInput type="number" formControlName="horas_funcion" placeholder="Horas" tabindex="2">
+            </mat-form-field>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>No. Serie</mat-label>
+                <input matInput type="text" formControlName="no_serie"  tabindex="3" style="text-transform: uppercase;">
+            </mat-form-field>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Modelo</mat-label>
+                <input matInput type="text" formControlName="modelo"  tabindex="4" style="text-transform: uppercase;">
+            </mat-form-field>
+        </div>
+        <!-- Sección "Evidencia fotografica" -->
+        <div class="col-12 mt-3">
+            <div class="d-flex justify-content-between align-items-center" (click)="toggleCollapse(1)">
+                <div class="d-flex gap-2">
+                    <mat-icon>image</mat-icon>
+                    <h4 class="actividad-title">Evidencia fotografica</h4>
+                </div>
+                <mat-icon>{{ isCollapsed(1) ? 'expand_more' : 'expand_less' }}</mat-icon>
+            </div>
+            <div [@collapse]="isCollapsed(1) ? 'collapsed' : 'expanded'" class="row">
+                <!-- Sección "Antes" -->
+                <div class="col-md-6 col-sm-12">
+                    <div class="photo-section">
+                        <h6 class="section-title"><mat-icon>camera</mat-icon> Antes</h6>
+                        <app-galeria 
+                        [images]="actividadForm.get('fotos_ant')?.value"
+                        (photosEvent)="deletePhoto($event,1)"/>
+                        <div class="d-flex gap-2 mt-2 justify-content-center">
+                            <button class="btn btn-primary btn-sm" (click)="antPhoto.click()">
+                                <mat-icon>image</mat-icon> Subir
+                            </button>
+                            <!-- Input oculto para subir imágenes -->
+                            <input #antPhoto
+                            type="file"
+                            class="d-none"
+                            multiple
+                            (change)="subirImagenes($event, 1)"
+                            accept="image/*"
+                            />
+                            <button class="btn btn-outline-primary btn-sm" (click)="openWebcamForActivity(1)">
+                                <mat-icon>add_a_photo</mat-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Sección "Despues" -->
+                <div class="col-md-6 col-sm-12">
+                    <div class="photo-section">
+                        <h6 class="section-title"><mat-icon>camera</mat-icon> Despues</h6>
+                        <app-galeria 
+                        [images]="actividadForm.get('fotos_des')?.value"/>
+                        <div class="d-flex gap-2 mt-2 justify-content-center">
+                            <button class="btn btn-primary btn-sm" (click)="desPhoto.click()">
+                                <mat-icon>image</mat-icon> Subir
+                            </button>
+                            <!-- Input oculto para subir imágenes -->
+                            <input #desPhoto
+                            type="file"
+                            class="d-none"
+                            multiple
+                            (change)="subirImagenes($event, 2)"
+                            accept="image/*"
+                            />
+                            <button class="btn btn-outline-primary btn-sm" (click)="openWebcamForActivity(2)">
+                                <mat-icon>add_a_photo</mat-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 mt-3">
+            <mat-form-field appearance="outline" class="w-100 txt-aunt">
+                <mat-label>Recomendación</mat-label>
+                <textarea matInput placeholder="Ingresa una recomendación acerca de la actividad..." tabindex="5"></textarea>
+            </mat-form-field>
+        </div>
+        <div class="col-12 d-flex justify-content-end">
+            <mat-checkbox formControlName="bFinalizo" color="primary" style="font-size: 16px;" tabindex="6">
+                Actividad finalizada
+            </mat-checkbox>
+        </div>
+        @if(!actividadForm.get('bFinalizo')?.value) {
+            <div class="col-12">
+                <mat-form-field appearance="outline" class="w-100 txt-aunt">
+                    <mat-label>Motivo</mat-label>
+                    <textarea matInput formControlName="motivo" placeholder="¿Por que no se finalizo?" tabindex="7"></textarea>
+                </mat-form-field>
+            </div>
+        }
+    </form>
+</div>
