--- a/app-scr/src/app/pages/bitacora-actividad-v2/components/horario/horario.component.html
+++ b/app-scr/src/app/pages/bitacora-actividad-v2/components/horario/horario.component.html
@@ -60,7 +60,7 @@
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Categoria</mat-label>
                     <input matInput type="text" formControlName="categoria"  tabindex="1" autofocus placeholder="Ej: Supervisor" style="text-transform: uppercase;">
-                    <mat-icon matSuffix>supervised_user_circle</mat-icon>
+                    <mat-icon matSuffix>engineering</mat-icon>
                     <mat-error class="text-truncate" *ngIf="horarioForm.get('categoria')?.hasError('required')">
                         Campo requerido
                     </mat-error>
