Formularios Bitacora Listo

--- a/app-scr/src/app/pages/bitacora-actividad-v2/components/actividad/actividad.component.scss
+++ b/app-scr/src/app/pages/bitacora-actividad-v2/components/actividad/actividad.component.scss
@@ -56,3 +56,7 @@ mat-form-field {
 ::ng-deep #form-actividad .mat-mdc-form-field-subscript-wrapper, .mat-mdc-form-field-bottom-align::before {
     display: none;
 }
+::ng-deep .ql-editor {
+  font-family: 'Roboto' !important;
+  font-size: 16px !important;
+}
