--- a/app-scr/src/app/pages/bitacora-actividad-v2/bitacora-actividad-v2.component.scss
+++ b/app-scr/src/app/pages/bitacora-actividad-v2/bitacora-actividad-v2.component.scss
@@ -42,7 +42,7 @@ mat-card-content.p-3 {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  padding: 0 !important;
+  padding: 0px !important;
 }
 
 mat-card-header {
@@ -68,6 +68,9 @@ mat-stepper {
   height: 100% !important;
 }
 
+::ng-deep .mat-step-header:hover:not([aria-disabled]), .mat-step-header:hover[aria-disabled=false] {
+    background-color: transparent !important;
+}
 /* Contenedor de cada paso */
 .mat-step-content {
   display: flex;
@@ -144,7 +147,7 @@ mat-stepper {
     }
 
     &.bg-light {
-      background-color: #EEF2F5;
+      background-color: #EEF2F5 !important;
     }
   }
 }
@@ -368,4 +371,11 @@ mat-card-header {
         height: auto;
         }
     }
+}
+
+#previsualizador, #previsualizador .row {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
