--- a/app-scr/src/app/pages/bitacora-actividad-v2/components/actividad/actividad.component.html
+++ b/app-scr/src/app/pages/bitacora-actividad-v2/components/actividad/actividad.component.html
@@ -6,110 +6,114 @@
     [isModalOpen]="isWebcamModalOpen"
     (modalClosed)="onWebcamModalClosed()"/>
     <form class="row gx-2 gy-2" [formGroup]="actividadForm" id="form-actividad">
-        <div class="d-flex justify-content-between align-items-center">
-            <div class="d-flex gap-2">
-                <mat-icon>construction</mat-icon>
-                <h4 class="actividad-title">Equipo</h4>
-            </div>
-        </div>
         <div class="col-sm-12 col-md-8">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Equipo</mat-label>
-                <input matInput type="text" formControlName="equipo" tabindex="1" autofocus style="text-transform: uppercase;">
+                <input matInput type="text" formControlName="equipo" style="text-transform: uppercase;">
             </mat-form-field>
         </div>
         <div class="col-sm-12 col-md-4">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label class="text-truncate">Horas de uso</mat-label>
-                <input matInput type="number" formControlName="horas_funcion" placeholder="Horas" tabindex="2">
+                <input matInput type="number" formControlName="horas_funcion" placeholder="Horas">
             </mat-form-field>
         </div>
         <div class="col-sm-12 col-md-4">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>No. Economico</mat-label>
-                <input matInput type="text" formControlName="no_economico" tabindex="3" autofocus style="text-transform: uppercase;">
+                <input matInput type="text" formControlName="no_economico" style="text-transform: uppercase;">
             </mat-form-field>
         </div>
         <div class="col-sm-12 col-md-4">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>No. Serie</mat-label>
-                <input matInput type="text" formControlName="no_serie"  tabindex="4" style="text-transform: uppercase;">
+                <input matInput type="text" formControlName="no_serie" style="text-transform: uppercase;">
             </mat-form-field>
         </div>
         <div class="col-sm-12 col-md-4">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Modelo</mat-label>
-                <input matInput type="text" formControlName="modelo"  tabindex="5" style="text-transform: uppercase;">
+                <input matInput type="text" formControlName="modelo" style="text-transform: uppercase;">
             </mat-form-field>
         </div>
         <!-- Sección "Evidencia fotografica" -->
         <div class="col-12 mt-3">
-            <div class="d-flex justify-content-between align-items-center" (click)="toggleCollapse(1)">
-                <div class="d-flex gap-2">
-                    <mat-icon>image</mat-icon>
-                    <h4 class="actividad-title">Evidencia fotografica</h4>
-                </div>
-                <mat-icon>{{ isCollapsed(1) ? 'expand_more' : 'expand_less' }}</mat-icon>
-            </div>
-            <div [@collapse]="isCollapsed(1) ? 'collapsed' : 'expanded'" class="row gy-1">
+            <div class="row gy-4">
                 <!-- Sección "Antes" -->
                 <div class="col-md-6 col-sm-12">
                     <div class="photo-section">
-                        <h6 class="section-title"><mat-icon>camera</mat-icon> Antes</h6>
-                        <app-galeria 
-                        [images]="actividadForm.get('fotos_ant')?.value"
-                        (photosEvent)="deletePhoto($event,1)"/>
-                        <div class="d-flex gap-2 mt-2 justify-content-center">
-                            <button class="btn btn-primary btn-sm" (click)="antPhoto.click()">
+                        <h6 class="section-title">
+                            <mat-icon>camera</mat-icon> Antes
+                        </h6>
+
+                        <div class="photo-grid">
+                            <!-- Miniatura galería -->
+                            <app-galeria
+                            [images]="actividadForm.get('fotos_ant')?.value"
+                            (photosEvent)="deletePhoto($event,1)"
+                            ></app-galeria>
+
+                            <!-- Botones de acción -->
+                            <div class="photo-actions">
+                            <button type="button" class="btn btn-primary btn-sm" (click)="antPhoto.click()">
                                 <mat-icon>image</mat-icon> Subir
                             </button>
-                            <!-- Input oculto para subir imágenes -->
-                            <input #antPhoto
-                            type="file"
-                            class="d-none"
-                            multiple
-                            (change)="subirImagenes($event, 1)"
-                            accept="image/*"
+
+                            <input
+                                #antPhoto
+                                type="file"
+                                class="d-none"
+                                multiple
+                                (change)="subirImagenes($event, 1)"
+                                accept="image/*"
                             />
-                            <button class="btn btn-outline-primary btn-sm" (click)="openWebcamForActivity(1)">
-                                <mat-icon>add_a_photo</mat-icon>
+
+                            <button type="button" class="btn btn-outline-primary btn-sm" (click)="openWebcamForActivity(1)">
+                                <mat-icon>add_a_photo</mat-icon> Cámara
                             </button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Sección "Despues" -->
                 <div class="col-md-6 col-sm-12">
                     <div class="photo-section">
-                        <h6 class="section-title"><mat-icon>camera</mat-icon> Despues</h6>
-                        <app-galeria 
-                        [images]="actividadForm.get('fotos_des')?.value"/>
-                        <div class="d-flex gap-2 mt-2 justify-content-center">
-                            <button class="btn btn-primary btn-sm" (click)="desPhoto.click()">
+                        <h6 class="section-title">
+                            <mat-icon>camera</mat-icon> Despues
+                        </h6>
+
+                        <div class="photo-grid">
+                            <!-- Miniatura galería -->
+                            <app-galeria
+                            [images]="actividadForm.get('fotos_des')?.value"
+                            (photosEvent)="deletePhoto($event,2)"
+                            ></app-galeria>
+
+                            <!-- Botones de acción -->
+                            <div class="photo-actions">
+                            <button type="button" class="btn btn-primary btn-sm" (click)="desPhoto.click()">
                                 <mat-icon>image</mat-icon> Subir
                             </button>
-                            <!-- Input oculto para subir imágenes -->
-                            <input #desPhoto
-                            type="file"
-                            class="d-none"
-                            multiple
-                            (change)="subirImagenes($event, 2)"
-                            accept="image/*"
+
+                            <input
+                                #desPhoto
+                                type="file"
+                                class="d-none"
+                                multiple
+                                (change)="subirImagenes($event, 2)"
+                                accept="image/*"
                             />
-                            <button class="btn btn-outline-primary btn-sm" (click)="openWebcamForActivity(2)">
-                                <mat-icon>add_a_photo</mat-icon>
+
+                            <button type="button" class="btn btn-outline-primary btn-sm" (click)="openWebcamForActivity(2)">
+                                <mat-icon>add_a_photo</mat-icon> Cámara
                             </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-12 mt-3">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex gap-2">
-                    <mat-icon>description</mat-icon>
-                    <h4 class="actividad-title">Descripción</h4>
-                </div>
-            </div>
             <quill-editor 
                 formControlName="descripcion"
                 [modules]="{
@@ -120,16 +124,17 @@
                     ]
                 }"
                 class="w-100 text-format"
-                tabindex="6"
                 placeholder="Describe la actividad realizada">
             </quill-editor>
-            <!-- <mat-form-field appearance="outline" class="w-100 txt-aunt">
+        </div>
+        <div class="col-12">
+            <mat-form-field appearance="outline" class="w-100 txt-aunt">
                 <mat-label>Recomendación</mat-label>
-                <textarea matInput placeholder="Ingresa una recomendación acerca de la actividad..." tabindex="5"></textarea>
-            </mat-form-field> -->
+                <textarea matInput formControlName="recomendacion" placeholder="¿Deseas agrear alguna recomendación?"></textarea>
+            </mat-form-field>
         </div>
         <div class="col-12 d-flex justify-content-end">
-            <mat-checkbox formControlName="bFinalizo" color="primary" style="font-size: 16px;" tabindex="7">
+            <mat-checkbox formControlName="bFinalizo" color="primary" style="font-size: 16px;">
                 Actividad finalizada
             </mat-checkbox>
         </div>
@@ -137,15 +142,9 @@
             <div class="col-12">
                 <mat-form-field appearance="outline" class="w-100 txt-aunt">
                     <mat-label>Motivo</mat-label>
-                    <textarea matInput formControlName="motivo" placeholder="¿Por que no se finalizo?" tabindex="8"></textarea>
+                    <textarea matInput formControlName="motivo" placeholder="¿Por que no se finalizo?"></textarea>
                 </mat-form-field>
             </div>
         }
-        <div class="col-12">
-            <mat-form-field appearance="outline" class="w-100 txt-aunt">
-                <mat-label>Recomendación</mat-label>
-                <textarea matInput formControlName="recomendacion" placeholder="¿Deseas agrear alguna recomendación?" [tabindex]="!actividadForm.get('bFinalizo')?.value ? '9' : '8'"></textarea>
-            </mat-form-field>
-        </div>
     </form>
 </div>
